docs/assets/main.css
@font-face {
    font-family: NationalPark;
    src: url(font.ttf);
}

body {
    margin: 0px;
    padding: 0px 1em 1em 1em;
    font-family: 'NationalPark';
    font-synthesis: none !important;
}

.section {
    max-width: 400px;
    min-width: 340px;
    margin: 1em auto 1em auto;
}

h1 {
    margin-bottom: 10px;
}

h3 {
    margin-top: 2em;
}

.text-center {
    text-align: center;
}

table {
    text-align: left;
    width: 100%;
}
table th {
    text-align: left;
}
td {
    height: 23px;
}

.wrapper {
    display: grid;
    grid-template-columns: repeat(2, [col-start] 1fr);
    grid-row-gap: 0.5em;
    grid-column-gap: 1em;
}
.wrapper img {
    width: 100%;
    aspect-ratio: 1 / 1;
    border-radius: 14px;
    background-color: lightgray;
}

.subtitle {
    text-align: center;
}

p {
    margin: 0px;
    text-align: justify;
}

.tag {
    margin: 0px auto 0px auto;
    width: 215px;
    height: 343px;
    border: 4px solid black;
    border-radius: 14px;
    justify-content: center;
    display: grid;
}
.tag img {
    margin: 10px auto 10px auto;
    width: 80px;
}
.tag h1 {
    margin: 10px auto 10px auto;
    font-size: 16pt;
}
.tag th {
    width: 108px;
}

#map { 
    height: 220px;
    border-radius: 14px;
    margin: 1em 0px 1em 0px;
}

.map-pin {
    filter: hue-rotate(170deg)
}

.map-pin-text {
    font-family: 'NationalPark';
    background-color: transparent;
    border: transparent;
    color: white;
    box-shadow: none;
    opacity: 1;
    font-weight: 500;
}
.map-pin-text::before {
    border: none;
}

.plain-link {
    color: black;
    text-decoration: none;
}

.punchout {
    background-color: lightgray;
    height:10px;
    border-radius: 10px;
    margin: 14px 4.5em 0px 4.5em;
    border: gray solid 0.5px;
}

